# AutoTestGen

./: .gitignore  README.md  cli.py  docker-entrypoint.sh  pyproject.toml
Test Generation/: .gitignore  README.md  methodology.tex
Test Generation/agent_logs/.checkpoints/: mifos-20260704-225722-7dc820.json  moodlestudent-20260704-210741-551ce0.json  moodlestudent-20260704-223741-b062ba.json  moodleteacher-20260704-210808-0a4b48.json  moodleteacher-20260704-224351-aa1ed9.json  parabank-20260704-202829-2b39af.json  parabank-20260704-203015-3264ec.json  parabank-20260704-205750-4f702e.json  parabank-20260704-221755-9de677.json  parabank-20260704-221811-415274.json  phptravels-20260704-211735-638fb2.json  (+3 more)
Test Generation/docs/: coverage_evaluation.md
Test Generation/skillls/: test_generation_scope.md
autotestgenx/: __init__.py  __main__.py  cli.py
autotestgenx/framework/: __init__.py
baselines/: README.md
baselines/few_shot/: README.md
baselines/zero_shot/: README.md
experiment_setup/: extract_coverage_metrics.py  generate_markdown.py  generate_post_verification_markdown.py  run_post_verification_all.sh
framework/agents/: post_verifier.py
framework/orchestrator/: post_verification_generator.py
results/: verification_result.md
results/Parabank/: parabank-gpt5-mini-agent.md  parabank-gpt5-mini-few-shot-per-module.md  parabank-gpt5-mini-zero-shot-per-module.md
test_case_generation/: cli.py
test_case_generation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_case_generation/prompts/: post_verification.md
(+359 files in other folders)
